[package]
name = "basic-emu-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
error-iter = "0.4"
log = "0.4"
clap = { version = "4.5.16", features = ["derive"] }
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
pixels = "0.14.0"
winit = "0.28"
winit_input_helper = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }
