[package]
name = "basic_emu_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
error-iter = "0.4"
log = "0.4"
clap = { version = "4.5.16", features = ["derive"] }
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
pixels = "0.14.0"
winit = { version = "0.28", features = ["serde"] }
winit_input_helper = "0.14"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = { version = "0.2.0", features = ["serde"] }
wasm-bindgen-cli-support = "0.2.95"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
